--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </head>
 
 <body class="pattern">
-    <header> <h1>Mon appli météo !</h1>
+    <header> <h1>Mon appli météo v2!</h1>
     <p>Pour le moment aucun style n'est définit, ne vous étonnez pas des bug graphiques (multi icones météo/pas de rafraissiment si une ville est incorecte).
         En ce qui concerne les fonctionnalités: </p>
     <ul>
