--- a/index.html
+++ b/index.html
@@ -100,9 +100,17 @@
     <footer></footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 <script src="js/ajax.js"></script>
 <script src="js/style.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/main.js"></script>
-
+<script>
+        function init()
+        {
+           var input = document.getElementById('ville');
+           var autocomplete = new google.maps.places.Autocomplete(input);
+        }
+        google.maps.event.addDomListener(window, 'load', init);
+        </script>
 </html>
