--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             </div>
         </section>
         <section id="forecastSection" class="l-section">
-            <h3>les prochaines heures</h3>
+            
 
-            <section id="nexthours"></section>
+            <div id="nexthours" class="nexthours w50"></div>
 
-            <h3>les prochains jours</h3>
+            
 
-            <section id="nextdays"></section>
+            <div id="nextdays"class="nextdays w50"></div>
 
 
         </section>
