--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mon site météo</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Ubuntu"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/main.css" />
-</head>
+  </head>
 
-<body class="pattern">
+  <body class="pattern">
     <header class="container-flex">
-        <!-- <h1>Mon appli météo !</h1>
+      <!--
+        <h1>Mon appli météo !</h1>
         <p>Pour le moment aucun style n'est définit, ne vous étonnez pas des bug graphiques ( rafraichement si une
             ville est incorecte).
             En ce qui concerne les fonctionnalités: </p>
@@ -51,53 +63,45 @@
 
         </ul>
 
-        Merci pour vos retours -->
-
-    </header >
+        Merci pour vos retours
+      -->
+    </header>
     <main class="container-flex">
-        <form action="" id="weather-query">
-            <input type="text" id="ville" placeholder="Ville, initiales pays">
-            <input type="submit" id="charger" value="Charger"></button>
-        </form>
-        <section id="weatherSection" class="l-section">
-            <div id="infoVille" class="w100"></div>
-            <div class="infoTemp w50">
-                <div id="commentaire"></div>             
-                <section id="view">
-                    <div id="tempsIcone"></div>
-                    <div id="temperature"></div>
-                </section>
-            </div>
-            <div class="infoPlus w50">
-                <div id="pression"></div>
-                <div id="vent"></div>
-            </div>
-            <div id="jsDate" class="infoDate w100">
-            </div>
-        </section>
-        <section id="forecastSection" class="l-section">
-            <div id="nexthours" class="nexthours w50"></div>      
-            <div id="nextdays"class="nextdays w50"></div>
-        </section>
-        <section id="villes" class="l-section">
-                <h3>Météo des villes les plus consultés</h3>
-                <ul id="topvilles"></ul>
-        </section>
+      <form action="" id="weather-query">
+        <input type="text" id="ville" placeholder="Ville, initiales pays" />
+        <button type="submit" id="charger" value="Charger">Charger</button>
+      </form>
+      <section id="weatherSection" class="l-section">
+        <div id="infoVille" class="w100"></div>
+        <div id="infoTemp" class="infoTemp w50"></div>
+        <div id="infoPlus" class="infoPlus w50"></div>
+        <div id="jsDate" class="infoDate w100"></div>
+      </section>
+      <section id="forecastSection" class="l-section">
+        <div id="nexthours" class="nexthours w50"></div>
+        <div id="nextdays" class="nextdays w50"></div>
+      </section>
+      <section id="villes" class="l-section">
+        <h3>Météo des villes les plus consultés</h3>
+        <ul id="topvilles"></ul>
+      </section>
     </main>
     <footer></footer>
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
-<script src="js/ajax.js"></script>
-<script src="js/style.js"></script>
-<script src="js/utils.js"></script>
-<script src="js/main.js"></script>
-<script>
-        function init()
-        {
-           var input = document.getElementById('ville');
-           var autocomplete = new google.maps.places.Autocomplete(input);
-        }
-        google.maps.event.addDomListener(window, 'load', init);
-        </script>
+  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script
+    type="text/javascript"
+    src="http://maps.google.com/maps/api/js?sensor=false&libraries=places"
+  ></script>
+  <script src="js/ajax.js"></script>
+  <script src="js/style.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    function init() {
+      var input = document.getElementById("ville");
+      var autocomplete = new google.maps.places.Autocomplete(input);
+    }
+    google.maps.event.addDomListener(window, "load", init);
+  </script>
 </html>
