add linear gradient

--- a/index.html
+++ b/index.html
@@ -71,22 +71,21 @@
       <form action="" id="weather-query" class="searchInput">
         <input type="text" id="ville" placeholder="Ville, initiales pays" />
         <button type="submit" id="charger" class="btn" value="Charger">
-          Charger
+          <i class="fas fa-search-location"></i> Cherche
         </button>
       </form>
       <section id="weatherSection" class="weatherSection l-section">
         <div id="infoVille" class="w100"></div>
-        <div id="infoTemp" class="infoTemp w50"></div>
-        <div id="infoPlus" class="infoPlus w50"></div>
+        <div id="infoTemp" class="infoTemp panel w50"></div>
+        <div id="infoPlus" class="infoPlus panel w50"></div>
         <div id="jsDate" class="infoDate w100"></div>
       </section>
       <section id="forecastSection" class="l-section">
-        <div id="nexthours" class="nexthours w50"></div>
-        <div id="nextdays" class="nextdays w50"></div>
+        <div id="nexthours" class="nexthours panel w50"></div>
+        <div id="nextdays" class="nextdays panel w50"></div>
       </section>
       <section id="villes" class="l-section">
         <h3>Météo des villes les plus consultés</h3>
-        <ul id="topvilles"></ul>
       </section>
     </main>
     <footer></footer>
