show/hide fields

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
       </form>
       <section id="weatherSection" class="weatherSection l-section">
         <div id="infoVille" class="w100"></div>
-        <div id="infoTemp" class="infoTemp panel w50"></div>
-        <div id="infoPlus" class="infoPlus panel w50"></div>
+        <div id="infoTemp" class="hide infoTemp panel w50"></div>
+        <div id="infoPlus" class="hide infoPlus panel w50"></div>
         <div id="jsDate" class="infoDate w100"></div>
       </section>
       <section id="forecastSection" class="l-section">
-        <div id="nexthours" class="nexthours panel w50"></div>
-        <div id="nextdays" class="nextdays panel w50"></div>
+        <div id="nexthours" class="hide nexthours panel w50"></div>
+        <div id="nextdays" class="hide nextdays panel w50"></div>
       </section>
       <section id="villes" class="l-section">
         <h3>Météo des villes les plus consultés</h3>
