--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </form>
       <div id="error" class="hide">Astuces :
         <ul>
+          <li>Verifiez l'orthographe de la ville</li>
           <li>Chercher une ville en ajoutant son pays (exemple : 'Rio, BR')</li>
           <li>Chercher une ville par son nom local (exemple : <s>'Pekin, CN'</s>, essayez 'Beijing, CN')</li>
         </ul>
